--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://westwood-blog.web.app/"
-title = "Your title"
+title = "Westwood Enduro"
 theme = "m10c"
 paginate = 5
 
@@ -14,36 +14,14 @@ paginate = 5
     url = "/tags/"
 
 [params]
-  author = "John Doe"
-  description = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vehicula turpis sit amet elit pretium."
+  author = "Le.Emosapien"
+  description = "Motorcycles, japanese food, camping, maps, programming, hiking, whatever...."
   menu_item_separator = " - "
+  avatar = "logo.png"
   [[params.social]]
     name = "github"
-    url = "https://github.com/gohugoio"
+    url = "https://github.com/emosapien"
   [[params.social]]
-    name = "twitter"
-    url = "https://twitter.com/gohugoio"
+    name = "instagram"
+    url = "https://instagram.com/renograde"
 
-  # Brown theme
-  #[params.style]
-  #  darkestColor = "#463625"
-  #  darkColor = "#2a3738"
-  #  primaryColor = "#eeee6a"
-  #  lightColor = "#96a879"
-  #  lightestColor = "#ffffff"
-
-  # Green theme
-  #[params.style]
-  #  darkestColor = "#315659"
-  #  darkColor = "#253031"
-  #  primaryColor = "#dad865"
-  #  lightColor = "#96a879"
-  #  lightestColor = "#fff"
-
-  # Red and black theme
-  #[params.style]
-  #  darkestColor = "#d35050"
-  #  darkColor = "#212121"
-  #  primaryColor = "#ffffff"
-  #  lightColor = "#a2a2a2"
-  #  lightestColor = "#d3d3d3"
