--- a/config.toml
+++ b/config.toml
@@ -9,6 +9,10 @@ paginate = 5
     name = "Home"
     url = "/"
   [[menu.main]]
+    identifier = "posts"
+    name = "Posts"
+    url = "/posts/"
+  [[menu.main]]
     identifier = "tags"
     name = "Tags"
     url = "/tags/"
